Update text responsive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ input, textarea {margin: 10px 0;}
 @media only screen and (max-width: 800px) {#main {margin-left: 120px;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{font-size: 12px; left: 48%; top: 48%; width: 90%;}}
 @media only screen and (max-width: 600px) {#main {margin-left: 0;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{left: 100%;}}
 @media only screen and (max-width: 414px) {#main {margin-left: 0;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{font-size: 8px;left: 50%;}.text h5{font-size: 11px; margin: 5px 0}}
+@media only screen and (max-width: 375px) {#main {margin-left: 0px;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{font-size: 7px;left: 50%;}.text h5{font-size: 7px; margin: 9px 0}}
 @media only screen and (max-width: 300px) {#main {margin-left: 0px;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{font-size: 5px;left: 50%;}.text h5{font-size: 7px; margin: 5px 0}}
 
 </style>
