--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 a.logo{text-decoration: none;}
 textarea{resize: none;}
+p{text-align: left;}
 input, textarea {margin: 10px 0;}
 .w3-row-padding img {margin-bottom: 12px}
 .w3-sidebar {width: 120px;background: #222;}
@@ -95,11 +96,11 @@ input, textarea {margin: 10px 0;}
 
     <h3 class="w3-padding-16 w3-text-light-grey">Education</h3>
     <hr style="width:200px" class="w3-opacity">
-    <h6>King Mongkut's Institute of Technology Ladkrabang (KMITL)</h6>
+    <p>King Mongkut's Institute of Technology Ladkrabang (KMITL)</p>
     <p><span>Bachelor of Science Program in Information Technology (2017 - Present)</span></p>
     <p>GPA: 3.21 (5 Terms)</p><br>
 
-    <h6>Bangpleeratbamrung School</h6>
+    <p>Bangpleeratbamrung School</p>
     <p><span>Gifted program (2014 - 2017)</span></p>
     <p>GPA: 3.70 (5 Terms)</p>
 
