--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ input, textarea {margin: 10px 0;}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"></span>Wassapol Pungjap</h1>
-    <p>Game Developer and Game Designer.</p>
+    <h6>Game Developer and Game Designer.</h6>
     <img src="resource/image/hero.png" alt="hero" class="w3-image" width="992" height="1108">
   </header>
 
