debug for gitdesktop

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 a.logo{text-decoration: none;}
 textarea{resize: none;}
-p{text-align: left;}
+p{text-align: left;} /*DEBUG*/
 input, textarea {margin: 10px 0;}
 .w3-row-padding img {margin-bottom: 12px}
 .w3-sidebar {width: 120px;background: #222;}
