--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@ input, textarea {margin: 10px 0;}
   <img src="resource/image/avatar.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
-    <p>HOME</p>
+    <h6>HOME</h6>
   </a>
   <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
-    <p>ABOUT</p>
+    <h6>ABOUT</h6>
   </a>
   <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-gamepad w3-xxlarge"></i>
-    <p>WORK</p>
+    <h6>WORK</h6>
   </a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>CONTACT</p>
+    <h6>CONTACT</h6>
   </a>
 </nav>
 
