debug for gitdesktop

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ input, textarea {margin: 10px 0;}
   <img src="resource/image/avatar.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
-    <h6>HOME</h6>
+    <h6>HOME</h6> <!--DEBUG-->
   </a>
   <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
