--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" type="image/png" href="resource/image/avatar.jpg">
 <style>
+::-webkit-scrollbar {
+  display: none;
+}
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 a.logo{text-decoration: none;}
 textarea{resize: none;}
