--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ input, textarea {margin: 10px 0;}
 .overlay {position: absolute;top: 0;bottom: 0;left: 0;right: 0;height: 100%;width: 100%;opacity: 0;transition: .5s ease;background-color:rgba(0,0,0,0.8);}
 .container:hover .overlay {opacity: 1;}
 .text {position: absolute;top: 30%;left: 42%;-webkit-transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);width: 80%;}
-@media only screen and (max-width: 1920px) {.overlay{opacity: :0;}}
+@media only screen and (max-width: 1920px) {.overlay{opacity: 0;}}
 @media only screen and (max-width: 800px) {#main {margin-left: 120px;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{font-size: 12px; left: 48%; top: 48%; width: 90%;}}
 @media only screen and (max-width: 600px) {#main {margin-left: 0;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{left: 100%;}}
 @media only screen and (max-width: 414px) {#main {margin-left: 0;}.overlay{opacity:1 !important;background-color:rgba(0,0,0,0.8)}.text{font-size: 8px;left: 50%;}.text h5{font-size: 11px; margin: 5px 0}}
@@ -81,14 +81,16 @@ input, textarea {margin: 10px 0;}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>My name is Wassapol Pungjap. I’m a motivated game developer with high ambition. I never experience working in any game company or studio, but would love to. I used to develop a horror game with simple mechanics (Flashlight, Batteries, Door, Key, Simple combat, Simple Pathfinding enemy) for my university subject, “Game Design and Development”. <br><br> I’ve been studying various of Unity Components such as ML-Agents, NavMeshComponents, I also interested in Unreal Engine and AWS Lumberyard.<br><br>In free time, I like to play games, analyze the game META (League of Legends, Teamfight Tactics, and Hearthstone), listen to music, mess around with Unity, and watch E-Sport. (Mostly LCK).<br><br>"It's not how much time you have, it's how you use it." - Ekko (League of Legends)
+    <p>My name is Wassapol Pungjap. I’m a motivated game developer with high ambition. I never experience working in any game company or studio, 
+      but would love to. I used to develop a horror game with simple mechanics (Flashlight, Batteries, Door, Key, Simple combat, Simple Pathfinding enemy) 
+      for my university subject, “Game Design and Development”. I also developped visual novel in the past as a freelance-job working with Architecture Student. 
+      Currently developping a visual novel for my Senior Project<br><br>In free time, I like to play games, analyze the game META (League of Legends, Teamfight Tactics, and Hearthstone), listen to music, mess around with Unity, and watch E-Sport. (Mostly LCK).
     </p>
 
 <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
     <hr style="width:200px" class="w3-opacity">
     <p>- Understand and experienced with Unity, mainly coding. Understand the major concepts of Game Object and components.</p>
     <p>- Capable of coding the game with Object-Oriented Programming Paradigms. Capable in coding with Object-Oriented Programming using Java, C#.</p>
-    <p>- Interested and Having little experience with Reinforcement Learning on Unity using Unity Machine Learning Agents Toolkit.</p>
     <p>- Aside from Unity, Experienced with other game engines such as Construct 2, Ren'Py.</p>
     <p>- Open-minded, openly expresses ideas. Coporately works with others.</p>
     <p>- Capable of reading and speaking in English.</p>
@@ -156,8 +158,9 @@ input, textarea {margin: 10px 0;}
               <div class="text">
                 <h5>Project Name: Lost</h5>
                 <h5>Tool: Unity</h5>
+                <h5>Language: C#</h5>
                 <h5>Position: Designer, Programmer, Writer</h5>
-                <h5>Responsibility: Mechanic Design, coding everything, story writing </h5>
+                <h5>Responsibility: Mechanic Design, coding everything, story writing.</h5>
                 <p>An ordinary man, lives with his normally life but one day, everything changes. Wake up to an unknown place, strange and unfamiliar. He need to find the way out of this place while uncover the truth behind this at the same time.</p>
               </div>
             </div>
@@ -169,10 +172,41 @@ input, textarea {margin: 10px 0;}
           <div class="overlay">
             <div class="text">
               <h5>Project Name: Battle of Surface</h5>
-              <h5>Tool: Eclipse Java Photon,  Adobe Photoshop, Punk-o-matic 2</h5>
-              <h5>Position: GUI Designer, Level Designer, Programmer, Composer</h5>
-              <h5>Responsibility: Coding all menus, designing background, compose a music. </h5>
-              <p>A mini 2D fighting game. Set in the future, humanity was near  extinction from the war, so the ingenious AI moved human  subconscious into the virtual world to keep on  fighting without actually dying.</p>
+              <h5>Tool: Eclipse Java Photon, Adobe Photoshop, Punk-o-matic 2</h5>
+              <h5>Language: Java (with libgdx)</h5>
+              <h5>Position: GUI Designer, Level Designer, Programmer, Composer.</h5>
+              <h5>Responsibility: Coding all menus, designing background, compose a music</h5>
+              <p>A mini 2D fighting game. Set in the future, humanity was near extinction from the war, so the ingenious AI moved human  subconscious into the virtual world to keep on  fighting without actually dying.</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="container">
+          <img src="resource/image/project-3.png" style="width:100%">
+          <a href="https://abc666777.github.io/mega-tic-tac-toe">
+          <div class="overlay">
+            <div class="text">
+              <h5>Project Name: Mega-Tic-Tac-Toe</h5>
+              <h5>Tool: Sublime Text</h5>
+              <h5>Language: HTML CSS JavaScript</h5>
+              <h5>Position: Programmer</h5>
+              <h5>Responsibility: Coding condition checking when to win or lose, adding music and sound effect.</h5>
+              <p>A 2 player offline Tic-Tac-Toe game with some new condition. Both players take turn marking the space in a 15x15 grid. The player who succeeds in placing five of their marks in a horizontal, vertical, or diagonal row is the winner. When the timer runs out, the opponent will take turn instead.</p>
+            </div>
+          </div>
+          </a>
+        </div>
+        <div class="container">
+          <img src="resource/image/project-4.png" style="width:100%">
+          <a href="https://www.youtube.com/watch?v=v4wWWf_D7oQ">
+          <div class="overlay">
+            <div class="text">
+              <h5>Project Name: Analysis: Personality Learning</h5>
+              <h5>Tool: Unity</h5>
+              <h5>Language: C#</h5>
+              <h5>Position: Programmer</h5>
+              <h5>Responsibility: Coding album scene, result scene, in-game menu, volume settings. Debugging some of the gameplay.</h5>
+              <p>Collaboration with Architecture student. This personality theory game is a visual novel. And there are questions for players to choose and answer according to the situation in the game The game will include content on personality theory. Allowing players to have experience with the characters. And gain knowledge of personality theory at the same time</p>
             </div>
           </div>
           </a>
