--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ input, textarea {margin: 10px 0;}
           </a>
         </div>
         <div class="container">
-          <img src="resource/image/project-3.png" style="width:100%">
+          <img src="resource/image/project-3.PNG" style="width:100%">
           <a href="https://abc666777.github.io/mega-tic-tac-toe">
           <div class="overlay">
             <div class="text">
@@ -197,7 +197,7 @@ input, textarea {margin: 10px 0;}
           </a>
         </div>
         <div class="container">
-          <img src="resource/image/project-4.png" style="width:100%">
+          <img src="resource/image/project-4.PNG" style="width:100%">
           <a href="https://www.youtube.com/watch?v=v4wWWf_D7oQ">
           <div class="overlay">
             <div class="text">
