--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           </a>
         </div>
         <div class="container">
-          <img src="resource/image/project-5.png" style="width:100%">
+          <img src="resource/image/project-5.PNG" style="width:100%">
           <a href="https://github.com/abc666777/devourer">
             <div class="overlay">
               <div class="text">
