--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <p>- Understand and experienced with Unity, mainly coding. Understand the major concepts of Game Object and
         components.</p>
       <p>- Capable of coding the game with Object-Oriented Programming Paradigms. Capable in coding with Object-Oriented
-        Programming using Java, C#.</p>
+        Programming using C# (Unity).</p>
       <p>- Aside from Unity, Experienced with other game engines such as Construct 2, Ren'Py.</p>
       <p>- Open-minded, openly expresses ideas. Coporately works with others.</p>
       <p>- Capable of reading and speaking in English.</p>
