--- a/index.html
+++ b/index.html
@@ -238,25 +238,17 @@
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
       <h2 class="w3-text-light-grey">About Me</h2>
       <hr style="width:200px" class="w3-opacity">
-      <p>My name is Wassapol Pungjap. I’m a motivated game developer with high ambition. I never experience working in
-        any game company or studio,
-        but would love to. I used to develop a horror game with simple mechanics (Flashlight, Batteries, , Key,
-        Simple combat, Simple Pathfinding enemy)
-        for my university subject, “Game Design and Development”. I also developped visual novel in the past Dooras a
-        freelance-job working with Architecture Student.
-        Currently developping a visual novel for my Senior Project<br><br>In free time, I like to play games, listen to
-        music, and watch Hololive.
+      <p>My name is Wassapol Pungjap. I’m a motivated game developer with high ambition. I developed a horror game with
+        simple mechanics (Flashlight, Batteries, Key, Simple combat, Simple Pathfinding enemy) for my university
+        subject, “Game Design and Development”. I also developed a visual novel in the past as a freelance-job working
+        with Architecture Student. Currently, I'm developing a visual novel for my Senior Project<br><br>In my free time
+        I like to play games, listen to music, and watch Hololive.
       </p>
 
       <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
       <hr style="width:200px" class="w3-opacity">
-      <p>- Understand and experienced with Unity, mainly coding. Understand the major concepts of Game Object and
-        components.</p>
-      <p>- Capable of coding the game with Object-Oriented Programming Paradigms. Capable in coding with Object-Oriented
-        Programming using C# (Unity).</p>
-      <p>- Aside from Unity, Experienced with other game engines such as Construct 2, Ren'Py.</p>
-      <p>- Open-minded, openly expresses ideas. Coporately works with others.</p>
-      <p>- Capable of reading and speaking in English.</p>
+      <p>- Experience in game development and prototyping using Unity and Construct 2.</p>
+      <p>- Minor experience in creating assets using Adobe Photoshop. (slightly skilled).</p>
 
       <button onclick="window.open('Resume-2020.jpg', '_blank');"
         class="w3-button w3-light-grey w3-padding-large w3-section">
