--- a/index.html
+++ b/index.html
@@ -245,192 +245,204 @@
         I like to play games, listen to music, and watch Hololive.
       </p>
 
-      <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
-      <hr style="width:200px" class="w3-opacity">
-      <p>- Experience in game development and prototyping using Unity and Construct 2.</p>
-      <p>- Minor experience in creating assets using Adobe Photoshop. (slightly skilled).</p>
+      <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+        <h2 class="w3-text-light-grey">Interested In</h2>
+        <hr style="width:200px" class="w3-opacity">
+        <p>- Game programming</p>
+        <p>- Game designing (Game balance)</p>
+        <p>- Game statistics</p>
 
-      <button onclick="window.open('Resume-2020.jpg', '_blank');"
-        class="w3-button w3-light-grey w3-padding-large w3-section">
-        <i class="fa fa-download" target="_blank"></i> Download Resume
-      </button>
+        <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
+        <hr style="width:200px" class="w3-opacity">
+        <p>- Experience in game development and prototyping using Unity and Construct 2.</p>
+        <p>- Minor experience in creating assets using Adobe Photoshop. (slightly skilled).</p>
 
-      <h3 class="w3-padding-16 w3-text-light-grey">Education</h3>
-      <hr style="width:200px" class="w3-opacity">
-      <p>King Mongkut's Institute of Technology Ladkrabang (KMITL)</p>
-      <p><span>Bachelor of Science Program in Information Technology (2017 - Present)</span></p>
-      <p>GPA: 3.24 (7 semesters)</p><br>
+        <button onclick="window.open('Resume-2020.jpg', '_blank');"
+          class="w3-button w3-light-grey w3-padding-large w3-section">
+          <i class="fa fa-download" target="_blank"></i> Download Resume
+        </button>
 
-      <p>Bangpleeratbamrung School</p>
-      <p><span>Gifted program (2014 - 2017)</span></p>
-      <p>GPA: 3.70 (5 semesters)</p>
+        <h3 class="w3-padding-16 w3-text-light-grey">Education</h3>
+        <hr style="width:200px" class="w3-opacity">
+        <p>King Mongkut's Institute of Technology Ladkrabang (KMITL)</p>
+        <p><span>Bachelor of Science Program in Information Technology (2017 - Present)</span></p>
+        <p>GPA: 3.24 (7 semesters)</p><br>
 
-      <h3 class="w3-padding-16 w3-text-light-grey">Activity</h3>
-      <hr style="width:200px" class="w3-opacity">
-      <p>Staff in Game Orion Camp, IT CAMP 14</p>
-      <p>Staff in GrindelGame Camp, IT CAMP 15</p>
-      <p>Teaching Unity to Multimedial juniors</p>
+        <p>Bangpleeratbamrung School</p>
+        <p><span>Gifted program (2014 - 2017)</span></p>
+        <p>GPA: 3.70 (5 semesters)</p>
 
-      <!-- End About Section -->
-    </div>
+        <h3 class="w3-padding-16 w3-text-light-grey">Activity</h3>
+        <hr style="width:200px" class="w3-opacity">
+        <p>Staff in Game Orion Camp, IT CAMP 14</p>
+        <p>Staff in GrindelGame Camp, IT CAMP 15</p>
+        <p>Teaching Unity to Multimedial juniors</p>
 
-    <div class="w3-padding-64 w3-content" id="photos">
-      <h2 class="w3-text-light-grey">My Photo</h2>
-      <hr style="width:200px" class="w3-opacity">
+        <!-- End About Section -->
+      </div>
 
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="w3-half">
-          <img src="resource/image/activity-1.jpg" style="width:100%">
-          <img src="resource/image/activity-2.png" style="width:100%">
-          <img src="resource/image/activity-3.jpg" style="width:100%">
-        </div>
+      <div class="w3-padding-64 w3-content" id="photos">
+        <h2 class="w3-text-light-grey">My Photo</h2>
+        <hr style="width:200px" class="w3-opacity">
 
-        <div class="w3-half">
-          <img src="resource/image/activity-4.jpg" style="width:100%">
-          <img src="resource/image/activity-5.jpg" style="width:100%">
-          <img src="resource/image/activity-6.jpg" style="width:100%">
+        <div class="w3-row-padding" style="margin:0 -16px">
+          <div class="w3-half">
+            <img src="resource/image/activity-1.jpg" style="width:100%">
+            <img src="resource/image/activity-2.png" style="width:100%">
+            <img src="resource/image/activity-3.jpg" style="width:100%">
+          </div>
+
+          <div class="w3-half">
+            <img src="resource/image/activity-4.jpg" style="width:100%">
+            <img src="resource/image/activity-5.jpg" style="width:100%">
+            <img src="resource/image/activity-6.jpg" style="width:100%">
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Portfolio Section -->
-    <div class="w3-padding-64 w3-content" id="photos">
-      <h2 class="w3-text-light-grey">My Work</h2>
-      <hr style="width:200px" class="w3-opacity">
+      <!-- Portfolio Section -->
+      <div class="w3-padding-64 w3-content" id="photos">
+        <h2 class="w3-text-light-grey">My Work</h2>
+        <hr style="width:200px" class="w3-opacity">
 
-      <!-- Grid for photos -->
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="container">
-          <img src="resource/image/project-1.png" style="width:100%">
-          <a href="https://www.youtube.com/watch?v=crnzp1l3wDU">
-            <div class="overlay">
-              <div class="text">
-                <h5>Project Name: Lost</h5>
-                <h5>Tool: Unity</h5>
-                <h5>Language: C#</h5>
-                <h5>Position: Designer, Programmer, Writer</h5>
-                <h5>Responsibility: Mechanic Design, coding everything, story writing.</h5>
-                <p>An ordinary man, lives with his normally life but one day, everything changes. Wake up to an unknown
-                  place, strange and unfamiliar. He need to find the way out of this place while uncover the truth
-                  behind this at the same time.</p>
+        <!-- Grid for photos -->
+        <div class="w3-row-padding" style="margin:0 -16px">
+          <div class="container">
+            <img src="resource/image/project-1.png" style="width:100%">
+            <a href="https://www.youtube.com/watch?v=crnzp1l3wDU">
+              <div class="overlay">
+                <div class="text">
+                  <h5>Project Name: Lost</h5>
+                  <h5>Tool: Unity</h5>
+                  <h5>Language: C#</h5>
+                  <h5>Position: Designer, Programmer, Writer</h5>
+                  <h5>Responsibility: Mechanic Design, coding everything, story writing.</h5>
+                  <p>An ordinary man, lives with his normally life but one day, everything changes. Wake up to an
+                    unknown
+                    place, strange and unfamiliar. He need to find the way out of this place while uncover the truth
+                    behind this at the same time.</p>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="container">
-          <img src="resource/image/project-5.PNG" style="width:100%">
-          <!--UPDATE-->
-          <a href="https://github.com/abc666777/devourer">
-            <div class="overlay">
-              <div class="text">
-                <h5>Project Name: Devourer</h5>
-                <h5>Tool: Unity</h5>
-                <h5>Language: C#</h5>
-                <h5>Position: Balancer, Programmer</h5>
-                <h5>Responsibility: Game Balance, coding everything.</h5>
-                <p>A classic Feeding Frenzy arcade-style with a twist. In Devourer, players control a hungry alien-like
-                  creature proposed to eat as many other aliens as possible like Feeding Frenzy, however, the difference
-                  is that players have a handful of buff to aid them. Since the game is endless, it has a different
-                  obstacle which is the hunger that will decrease over time and darkness that surrounds you, you can
-                  only be guided by light on your head.
-                </p>
+            </a>
+          </div>
+          <div class="container">
+            <img src="resource/image/project-5.PNG" style="width:100%">
+            <!--UPDATE-->
+            <a href="https://github.com/abc666777/devourer">
+              <div class="overlay">
+                <div class="text">
+                  <h5>Project Name: Devourer</h5>
+                  <h5>Tool: Unity</h5>
+                  <h5>Language: C#</h5>
+                  <h5>Position: Balancer, Programmer</h5>
+                  <h5>Responsibility: Game Balance, coding everything.</h5>
+                  <p>A classic Feeding Frenzy arcade-style with a twist. In Devourer, players control a hungry
+                    alien-like
+                    creature proposed to eat as many other aliens as possible like Feeding Frenzy, however, the
+                    difference
+                    is that players have a handful of buff to aid them. Since the game is endless, it has a different
+                    obstacle which is the hunger that will decrease over time and darkness that surrounds you, you can
+                    only be guided by light on your head.
+                  </p>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="container">
-          <img src="resource/image/project-2.png" style="width:100%">
-          <a href="https://github.com/sopoat0101/MiniFightingGame">
-            <div class="overlay">
-              <div class="text">
-                <h5>Project Name: Battle of Surface</h5>
-                <h5>Tool: Eclipse Java Photon, Adobe Photoshop, Punk-o-matic 2</h5>
-                <h5>Language: Java (with libgdx)</h5>
-                <h5>Position: GUI Designer, Level Designer, Programmer, Composer.</h5>
-                <h5>Responsibility: Coding all menus, designing background, compose a music</h5>
-                <p>A mini 2D fighting game. Set in the future, humanity was near extinction from the war, so the
-                  ingenious AI moved human subconscious into the virtual world to keep on fighting without actually
-                  dying.</p>
+            </a>
+          </div>
+          <div class="container">
+            <img src="resource/image/project-2.png" style="width:100%">
+            <a href="https://github.com/sopoat0101/MiniFightingGame">
+              <div class="overlay">
+                <div class="text">
+                  <h5>Project Name: Battle of Surface</h5>
+                  <h5>Tool: Eclipse Java Photon, Adobe Photoshop, Punk-o-matic 2</h5>
+                  <h5>Language: Java (with libgdx)</h5>
+                  <h5>Position: GUI Designer, Level Designer, Programmer, Composer.</h5>
+                  <h5>Responsibility: Coding all menus, designing background, compose a music</h5>
+                  <p>A mini 2D fighting game. Set in the future, humanity was near extinction from the war, so the
+                    ingenious AI moved human subconscious into the virtual world to keep on fighting without actually
+                    dying.</p>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="container">
-          <img src="resource/image/project-3.PNG" style="width:100%">
-          <a href="https://abc666777.github.io/mega-tic-tac-toe">
-            <div class="overlay">
-              <div class="text">
-                <h5>Project Name: Mega-Tic-Tac-Toe</h5>
-                <h5>Tool: Sublime Text</h5>
-                <h5>Language: HTML CSS JavaScript</h5>
-                <h5>Position: Programmer</h5>
-                <h5>Responsibility: Coding condition checking when to win or lose, adding music and sound effect.</h5>
-                <p>A 2 player offline Tic-Tac-Toe game with some new condition. Both players take turn marking the space
-                  in a 15x15 grid. The player who succeeds in placing five of their marks in a horizontal, vertical, or
-                  diagonal row is the winner. When the timer runs out, the opponent will take turn instead.</p>
+            </a>
+          </div>
+          <div class="container">
+            <img src="resource/image/project-3.PNG" style="width:100%">
+            <a href="https://abc666777.github.io/mega-tic-tac-toe">
+              <div class="overlay">
+                <div class="text">
+                  <h5>Project Name: Mega-Tic-Tac-Toe</h5>
+                  <h5>Tool: Sublime Text</h5>
+                  <h5>Language: HTML CSS JavaScript</h5>
+                  <h5>Position: Programmer</h5>
+                  <h5>Responsibility: Coding condition checking when to win or lose, adding music and sound effect.</h5>
+                  <p>A 2 player offline Tic-Tac-Toe game with some new condition. Both players take turn marking the
+                    space
+                    in a 15x15 grid. The player who succeeds in placing five of their marks in a horizontal, vertical,
+                    or
+                    diagonal row is the winner. When the timer runs out, the opponent will take turn instead.</p>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="container">
-          <img src="resource/image/project-4.PNG" style="width:100%">
-          <a href="https://www.youtube.com/watch?v=v4wWWf_D7oQ">
-            <div class="overlay">
-              <div class="text">
-                <h5>Project Name: Analysis: Personality Learning</h5>
-                <h5>Tool: Unity</h5>
-                <h5>Language: C#</h5>
-                <h5>Position: Programmer</h5>
-                <h5>Responsibility: Coding album scene, result scene, in-game menu, volume settings. Debugging some of
-                  the gameplay.</h5>
-                <p>Collaboration with Architecture student. This personality theory game is a visual novel. And there
-                  are questions for players to choose and answer according to the situation in the game The game will
-                  include content on personality theory. Allowing players to have experience with the characters. And
-                  gain knowledge of personality theory at the same time</p>
+            </a>
+          </div>
+          <div class="container">
+            <img src="resource/image/project-4.PNG" style="width:100%">
+            <a href="https://www.youtube.com/watch?v=v4wWWf_D7oQ">
+              <div class="overlay">
+                <div class="text">
+                  <h5>Project Name: Analysis: Personality Learning</h5>
+                  <h5>Tool: Unity</h5>
+                  <h5>Language: C#</h5>
+                  <h5>Position: Programmer</h5>
+                  <h5>Responsibility: Coding album scene, result scene, in-game menu, volume settings. Debugging some of
+                    the gameplay.</h5>
+                  <p>Collaboration with Architecture student. This personality theory game is a visual novel. And there
+                    are questions for players to choose and answer according to the situation in the game The game will
+                    include content on personality theory. Allowing players to have experience with the characters. And
+                    gain knowledge of personality theory at the same time</p>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <!-- End photo grid -->
         </div>
-        <!-- End photo grid -->
+        <!-- End Portfolio Section -->
       </div>
-      <!-- End Portfolio Section -->
+
+      <!-- Contact Section -->
+      <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+        <h2 class="w3-text-light-grey">Contact Me</h2>
+        <hr style="width:200px" class="w3-opacity">
+
+        <div class="w3-section">
+          <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> 305/70 M.11 Sukhaphiban Rd.
+            Bangplee Yai, Bangplee, Samut Prakan 10540 </p>
+          <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> +66 95-876-3539</p>
+          <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> pptvstudio@gmail.com</p>
+        </div><br>
+        <!-- End Contact Section -->
+      </div>
+
+      <!-- Footer -->
+      <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+        <a class="logo" href="https://www.facebook.com/wassapolOsas">
+          <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        </a>
+        <a class="logo" href="https://www.youtube.com/MrHellGamerChannel">
+          <i class="fa fa-youtube-play w3-hover-opacity"></i>
+        </a>
+        <a class="logo" href="https://github.com/abc666777/">
+          <i class="fa fa-github w3-hover-opacity"></i>
+        </a>
+        <a class="logo" href="https://www.linkedin.com/in/wassapolpungjap/">
+          <i class="fa fa-linkedin w3-hover-opacity"></i>
+        </a>
+        <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"
+            class="w3-hover-text-green">w3.css</a></p>
+        <!-- End footer -->
+      </footer>
+
+      <!-- END PAGE CONTENT -->
     </div>
-
-    <!-- Contact Section -->
-    <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-      <h2 class="w3-text-light-grey">Contact Me</h2>
-      <hr style="width:200px" class="w3-opacity">
-
-      <div class="w3-section">
-        <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> 305/70 M.11 Sukhaphiban Rd.
-          Bangplee Yai, Bangplee, Samut Prakan 10540 </p>
-        <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> +66 95-876-3539</p>
-        <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> pptvstudio@gmail.com</p>
-      </div><br>
-      <!-- End Contact Section -->
-    </div>
-
-    <!-- Footer -->
-    <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-      <a class="logo" href="https://www.facebook.com/wassapolOsas">
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      </a>
-      <a class="logo" href="https://www.youtube.com/MrHellGamerChannel">
-        <i class="fa fa-youtube-play w3-hover-opacity"></i>
-      </a>
-      <a class="logo" href="https://github.com/abc666777/">
-        <i class="fa fa-github w3-hover-opacity"></i>
-      </a>
-      <a class="logo" href="https://www.linkedin.com/in/wassapolpungjap/">
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-      </a>
-      <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"
-          class="w3-hover-text-green">w3.css</a></p>
-      <!-- End footer -->
-    </footer>
-
-    <!-- END PAGE CONTENT -->
-  </div>
 
 </body>
 
