--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       </p>
 
       <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-        <h2 class="w3-text-light-grey">Interested In</h2>
+        <h2 class="w3-padding-16 w3-text-light-grey">Interested In</h2>
         <hr style="width:200px" class="w3-opacity">
         <p>- Game programming</p>
         <p>- Game designing (Game balance)</p>
