--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <hr style="width:200px" class="w3-opacity">
         <p>- Game programming</p>
         <p>- Game designing (Game balance)</p>
-        <p>- Game statistics</p>
+        <p>- Game statistics (Winrate, Playrate, Pickrate, ETC.)</p>
 
         <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
         <hr style="width:200px" class="w3-opacity">
