--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
         <p>- Game programming</p>
         <p>- Game designing (Game balance)</p>
         <p>- Game statistics (Winrate, Playrate, Pickrate, ETC.)</p>
+        <!--NEW-->
 
         <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
         <hr style="width:200px" class="w3-opacity">
