--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
 
     <!-- About Section -->
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+      <button onclick="window.open('resume-2021.pdf', '_blank');"
+        class="w3-button w3-light-grey w3-padding-large w3-section">
+        <i class="fa fa-download" target="_blank"></i> Download Resume
+      </button>
       <h2 class="w3-text-light-grey">About Me</h2>
       <hr style="width:200px" class="w3-opacity">
       <p>My name is Wassapol Pungjap. I’m a motivated game developer with high ambition. I developed a horror game with
@@ -257,11 +261,6 @@
         <hr style="width:200px" class="w3-opacity">
         <p>- Experience in game development and prototyping using Unity and Construct 2.</p>
         <p>- Minor experience in creating assets using Adobe Photoshop. (slightly skilled).</p>
-
-        <button onclick="window.open('Resume-2020.jpg', '_blank');"
-          class="w3-button w3-light-grey w3-padding-large w3-section">
-          <i class="fa fa-download" target="_blank"></i> Download Resume
-        </button>
 
         <h3 class="w3-padding-16 w3-text-light-grey">Education</h3>
         <hr style="width:200px" class="w3-opacity">
