add new project

--- a/index.html
+++ b/index.html
@@ -403,6 +403,21 @@
               </div>
             </a>
           </div>
+          <div class="container">
+            <img src="resource/image/project-6.PNG" style="width:100%">
+            <a href="https://ppdark1234.itch.io/tri-case">
+              <div class="overlay">
+                <div class="text">
+                  <h5>Project Name: Tri-case</h5>
+                  <h5>Tool: Unity</h5>
+                  <h5>Language: C#</h5>
+                  <h5>Position: Programmer</h5>
+                  <h5>Responsibility: Coding everything</h5>
+                  <p>A senior project at KMITL, a visual novel about Cybercrime Law.</p>
+                </div>
+              </div>
+            </a>
+          </div>
           <!-- End photo grid -->
         </div>
         <!-- End Portfolio Section -->
