--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             </a>
           </div>
           <div class="container">
-            <img src="resource/image/project-6.PNG" style="width:100%">
+            <img src="resource/image/project-6.png" style="width:100%">
             <a href="https://ppdark1234.itch.io/tri-case">
               <div class="overlay">
                 <div class="text">
