--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
           <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> 305/70 M.11 Sukhaphiban Rd.
             Bangplee Yai, Bangplee, Samut Prakan 10540 </p>
           <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> +66 95-876-3539</p>
-          <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> pptvstudio@gmail.com</p>
+          <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> wassapol.pungjap@gmail.com |
+            pptvstudio@gmail.com
+          </p>
         </div><br>
         <!-- End Contact Section -->
       </div>
