--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           <div class="container">
             <img src="resource/image/project-5.PNG" style="width:100%">
             <!--UPDATE-->
-            <a href="https://github.com/abc666777/devourer">
+            <a href="https://ppdark1234.itch.io/devourer">
               <div class="overlay">
                 <div class="text">
                   <h5>Project Name: Devourer</h5>
