--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
         <h3 class="w3-padding-16 w3-text-light-grey">Education</h3>
         <hr style="width:200px" class="w3-opacity">
         <p>King Mongkut's Institute of Technology Ladkrabang (KMITL)</p>
-        <p><span>Bachelor of Science Program in Information Technology (2017 - Present)</span></p>
-        <p>GPA: 3.24 (7 semesters)</p><br>
+        <p><span>Bachelor of Science Program in Information Technology (2017 - 2020)</span></p>
+        <p>GPA: 3.25 (Second Class Honors)</p><br>
 
         <p>Bangpleeratbamrung School</p>
-        <p><span>Gifted program (2014 - 2017)</span></p>
+        <p><span>Gifted program (2014 - 2016)</span></p>
         <p>GPA: 3.70 (5 semesters)</p>
 
         <h3 class="w3-padding-16 w3-text-light-grey">Activity</h3>
