--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
       <h1 class="w3-jumbo"><span class="w3-hide-small"></span>Wassapol Pungjap</h1>
       <h6>Game Programmer and Game Designer.</h6>
-      <img src="resource/image/hero.png" alt="hero" class="w3-image" width="992" height="1108">
+      <!-- <img src="resource/image/hero.png" alt="hero" class="w3-image" width="992" height="1108"> -->
     </header>
 
     <!-- About Section -->
