update hero image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     text-align: left;
   }
 
+  text-grey {
+    color: d3d3d3;
+  }
+
+  text-white {
+    color: white;
+  }
+
   /*DEBUG*/
   input,
   textarea {
@@ -232,15 +240,17 @@
       <h1 class="w3-jumbo"><span class="w3-hide-small"></span>Wassapol Pungjap</h1>
       <h6>Game Programmer and Game Designer.</h6>
       <!-- <img src="resource/image/hero.png" alt="hero" class="w3-image" width="992" height="1108"> -->
+      <img src="resource/image/hero_3.png" alt="hero" class="w3-image" width="992" height="1108">
+
     </header>
 
     <!-- About Section -->
-    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+    <div class="w3-content w3-justify text-grey w3-padding-64" id="about">
       <button onclick="window.open('resume-2021.pdf', '_blank');"
         class="w3-button w3-light-grey w3-padding-large w3-section">
         <i class="fa fa-download" target="_blank"></i> Download Resume
       </button>
-      <h2 class="w3-text-light-grey">About Me</h2>
+      <h2 class="text-white">About Me</h2>
       <hr style="width:200px" class="w3-opacity">
       <p>My name is Wassapol Pungjap. I’m a motivated game developer with high ambition. I developed a horror game with
         simple mechanics (Flashlight, Batteries, Key, Simple combat, Simple Pathfinding enemy) for my university
@@ -249,20 +259,20 @@
         I like to play games, listen to music, and watch Hololive.
       </p>
 
-      <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-        <h2 class="w3-padding-16 w3-text-light-grey">Interested In</h2>
+      <div class="w3-content w3-justify text-grey w3-padding-64" id="about">
+        <h2 class="w3-padding-16 text-white">Interested In</h2>
         <hr style="width:200px" class="w3-opacity">
         <p>- Game programming</p>
         <p>- Game designing (Game balance)</p>
         <p>- Game statistics (Winrate, Playrate, Pickrate, ETC.)</p>
         <!--NEW-->
 
-        <h3 class="w3-padding-16 w3-text-light-grey">My Skill</h3>
+        <h3 class="w3-padding-16 text-white">My Skill</h3>
         <hr style="width:200px" class="w3-opacity">
         <p>- Experience in game development and prototyping using Unity and Construct 2.</p>
         <p>- Minor experience in creating assets using Adobe Photoshop. (slightly skilled).</p>
 
-        <h3 class="w3-padding-16 w3-text-light-grey">Education</h3>
+        <h3 class="w3-padding-16 text-white">Education</h3>
         <hr style="width:200px" class="w3-opacity">
         <p><b>King Mongkut's Institute of Technology Ladkrabang (KMITL)</b></p>
         <p><span>Bachelor of Science Program in Information Technology (2017 - 2020)</span></p>
@@ -272,7 +282,7 @@
         <p><span>Gifted program (2014 - 2016)</span></p>
         <p>GPA: 3.70 (5 semesters)</p>
 
-        <h3 class="w3-padding-16 w3-text-light-grey">Activity</h3>
+        <h3 class="w3-padding-16 text-white">Activity</h3>
         <hr style="width:200px" class="w3-opacity">
         <p>Staff in Game Orion Camp, IT CAMP 14</p>
         <p>Staff in GrindelGame Camp, IT CAMP 15</p>
@@ -282,7 +292,7 @@
       </div>
 
       <div class="w3-padding-64 w3-content" id="photos">
-        <h2 class="w3-text-light-grey">My Photo</h2>
+        <h2 class="text-white">My Photo</h2>
         <hr style="width:200px" class="w3-opacity">
 
         <div class="w3-row-padding" style="margin:0 -16px">
@@ -302,7 +312,7 @@
 
       <!-- Portfolio Section -->
       <div class="w3-padding-64 w3-content" id="photos">
-        <h2 class="w3-text-light-grey">My Work</h2>
+        <h2 class="text-white">My Work</h2>
         <hr style="width:200px" class="w3-opacity">
 
         <!-- Grid for photos -->
@@ -424,8 +434,8 @@
       </div>
 
       <!-- Contact Section -->
-      <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-        <h2 class="w3-text-light-grey">Contact Me</h2>
+      <div class="w3-padding-64 w3-content text-grey" id="contact">
+        <h2 class="text-white">Contact Me</h2>
         <hr style="width:200px" class="w3-opacity">
 
         <div class="w3-section">
@@ -440,7 +450,7 @@
       </div>
 
       <!-- Footer -->
-      <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+      <footer class="w3-content w3-padding-64 text-grey w3-xlarge">
         <a class="logo" href="https://www.facebook.com/wassapolOsas">
           <i class="fa fa-facebook-official w3-hover-opacity"></i>
         </a>
